# cmake-template-opencv

./: .clangd  .gitignore  CMakeLists.txt  README.md  draw_bounding_box.cpp  get_cameras.hpp  live_cam.cpp  live_cam_motion_detection.cpp  live_cam_object_detection.cpp  main.cpp  preprocess_frame.cpp  preprocess_frame.hpp  yolo11n.py
.github/workflow/: build.yml
.github/workflows/: build.yml
